# agi_class_examples

./: .pylintrc  README.md  init.sh  pyproject.toml  requirements.txt
src/langchain_samples/agent/: custom_agent.py  tools.py
src/langchain_samples/lcel/: lcel.py
src/langchain_samples/tutorial/: agent.py  chatbot.py  fast_server.py  translator.py  vectorstore.py
src/langgraph_samples/code_assistant/: lcel.py
src/langgraph_samples/tutorial/: quick_start.py
src/metagpt/: hello_metagpt.py
src/zhihu/LangChain/: LCEL.py  agent.py  basic_io.py  data_connection.py  lcel.py  lcel_factory.py  lcel_func_call.py  outputparser.py  prompt.json  prompt.yaml  retrieval.py
src/zhihu/RAG/: common.py  prompt.py  requirements.txt
src/zhihu/common/: README.md  REAMDE.md  api.py  api_ernie.py  util.py
src/zhihu/function_call/: README.md  common.py  eval.py  geo.py  json.py  multi_table_query.py  query.py  stream.py  sum.py
src/zhihu/hello/: hello_python.py
src/zhihu/langchain_source/: chat_model_older.py  cot_agent.py  custom_auto_gpt.py  custom_openai_agent.py  (+3 more)
tests/langchain/: test_agent.py  test_tut.py
tests/langgraph/: test_code_assistant.py  test_tut.py
tests/zhihu/: test_api.py  test_api_ernie.py  test_chromadb_rag.py  test_deploy.py  test_dialog_NLU.py  test_embedding.py  test_es_rag.py  test_func_call.py  test_hello.py  test_hello_python.py  test_langchain_LCEL.py  test_langchain_agent.py  test_langchain_connector.py  test_langchain_io.py  test_langchain_lcel.py  test_langchain_retrieval.py  test_langfuse.py  test_multimodal.py  test_prompt_context.py
(+21 files in other folders)
